; ModuleID = '/home/carl/AnghaBench/systemd/src/machine/extr_machined-dbus.c_method_create_machine_internal.c'
source_filename = "/home/carl/AnghaBench/systemd/src/machine/extr_machined-dbus.c_method_create_machine_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"(sv)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*, i32*)* @method_create_machine_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @method_create_machine_internal(i32* %0, i32 %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_5__*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to i32*
  store i32* %14, i32** %10, align 8
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %11, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @assert(i32* %15)
  %17 = load i32*, i32** %10, align 8
  %18 = call i32 @assert(i32* %17)
  %19 = load i32*, i32** %10, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @method_create_or_register_machine(i32* %19, i32* %20, i32 %21, %struct.TYPE_5__** %11, i32* %22)
  store i32 %23, i32* %12, align 4
  %24 = load i32, i32* %12, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %4
  %27 = load i32, i32* %12, align 4
  store i32 %27, i32* %5, align 4
  br label %51

28:                                               ; preds = %4
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @sd_bus_message_enter_container(i32* %29, i8 signext 97, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i32 %30, i32* %12, align 4
  %31 = load i32, i32* %12, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  br label %47

34:                                               ; preds = %28
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = load i32*, i32** %9, align 8
  %38 = call i32 @machine_start(%struct.TYPE_5__* %35, i32* %36, i32* %37)
  store i32 %38, i32* %12, align 4
  %39 = load i32, i32* %12, align 4
  %40 = icmp slt i32 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %34
  br label %47

42:                                               ; preds = %34
  %43 = load i32*, i32** %6, align 8
  %44 = call i32 @sd_bus_message_ref(i32* %43)
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 0
  store i32 %44, i32* %46, align 4
  store i32 1, i32* %5, align 4
  br label %51

47:                                               ; preds = %41, %33
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %49 = call i32 @machine_add_to_gc_queue(%struct.TYPE_5__* %48)
  %50 = load i32, i32* %12, align 4
  store i32 %50, i32* %5, align 4
  br label %51

51:                                               ; preds = %47, %42, %26
  %52 = load i32, i32* %5, align 4
  ret i32 %52
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @method_create_or_register_machine(i32*, i32*, i32, %struct.TYPE_5__**, i32*) #1

declare dso_local i32 @sd_bus_message_enter_container(i32*, i8 signext, i8*) #1

declare dso_local i32 @machine_start(%struct.TYPE_5__*, i32*, i32*) #1

declare dso_local i32 @sd_bus_message_ref(i32*) #1

declare dso_local i32 @machine_add_to_gc_queue(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
